<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/search_button"
        android:title="@android:string/search_go"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/change_sorting"
        android:title="@string/sort_by"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/change_type_of_view"
        android:title="@string/view_type"
        app:showAsAction="withText" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="withText"/>


    <item
        android:id="@+id/action_pin"
        android:title=""
        android:icon="@drawable/outline_push_pin_24"
        app:showAsAction="always" />

</menu>