<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView

            android:id="@+id/aboutTextView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/about"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/note_image"
            android:src="@mipmap/ic_launcher" />


        <TextView
            android:id="@+id/textView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/notes_nversion_1_0"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/linkToGitHub"

            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/back_from_image_button"
            android:contentDescription="@string/github_button"
            android:scaleType="fitCenter"
            android:src="@drawable/git_hub_ico" />


    </LinearLayout>
</ScrollView>